Update portfolio website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script> -->
 </head>
 <body>
     <header class="header">
@@ -19,21 +21,23 @@
         <a href="#">Contact</a>
     </nav>
     </header>
-    <selection class="Home">
+    <section class="Home">
         <div class="home-content">
             <h3>Hello, Its' Me</h3>
             <h1>Vidhi Vasani</h1>
-            <h3>And I'm a</h3>
-            <p>I'm a BCA student and a beginner web developer.</p>
-                <br>i am learning to create website using HTML, CSS and basic programming.
+            <h3>And I'm a <span class="text"></span></h3>
+            <p>I'm a BCA student and a beginner web developer.
+                <br>i am learning to create website using HTML, CSS and basic programming.</p>
             <div class="Home-sci">
-                <a herf="#"></a>
-                <a herf="#"></a>
-                <a herf="#"></a>
-                <a herf="#"></a>
+                <a herf="#"><i class='bx bxl-facebook'></i></a>
+                <a herf="#"><i class='bx bxl-github'></i></a>
+                <a herf="#"><i class='bx bxl-instagram'></i></a>
+                <a herf="#"><i class='bx bxl-whatsapp'></i></a>
             </div>
+            <a href="#" class="btn-box">More About Me</a>
             </div>
-    </selection>
-    <!-- <script src="main.js"></script> -->
+    </section>
+    <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
+     <script src="main.js"></script>
 </body>
 </html>
