--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
    
 
     <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Projects</a>
-        <a href="#">Skills</a>
-        <a href="#">Contact</a>
+        <a href="#" style="--i:1"class="active">Home</a>
+        <a href="#" style="--i:2">About</a>
+        <a href="#" style="--i:3">Projects</a>
+        <a href="#" style="--i:4">Skills</a>
+        <a href="#" style="--i:5">Contact</a>
     </nav>
     </header>
     <section class="Home">
@@ -27,16 +27,29 @@
             <h1>Vidhi Vasani</h1>
             <h3>And I'm a <span class="text"></span></h3>
             <p>I'm a BCA student and a beginner web developer.
-                <br>i am learning to create website using HTML, CSS and basic programming.</p>
+                <br>i am learning to create website using HTML, CSS and <br>basic programming.</p>
+           
             <div class="Home-sci">
-                <a herf="#"><i class='bx bxl-facebook'></i></a>
-                <a herf="#"><i class='bx bxl-github'></i></a>
-                <a herf="#"><i class='bx bxl-instagram'></i></a>
-                <a herf="#"><i class='bx bxl-whatsapp'></i></a>
+                <a href="#" style="--i:7"><i class='bx bxl-facebook'></i></a>
+                <a href="#" style="--i:8"><i class='bx bxl-github'></i></a>
+                <a href="#" style="--i:9"><i class='bx bxl-instagram'></i></a>
+                <a href="#" style="--i:10"><i class='bx bxl-whatsapp'></i></a>
             </div>
             <a href="#" class="btn-box">More About Me</a>
             </div>
+
+             <div class="profile-img">
+                <img src="photo1.png" alt="profile-img">
+            </div>
+
     </section>
+    <!-- <section class="about" id="about">
+        <div class="about_img"></div>
+            <img src=""
+    </section> -->
+
+
+
     <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
      <script src="main.js"></script>
 </body>
